# apt-package-function

./: CHANGELOG.md  README.md  function_app.py  pyproject.toml  rg.bicep  rg_add_eventgrid.bicep  rg_funcapp.bicep  ruff.toml
.github/workflows/: ci.yml
src/apt_package_function/: __init__.py  azcmd.py  bicep_deployment.py  create_resources.py  func_app.py  poetry.py  resource_group.py
